# cros

./: .gitignore  Cargo.toml  build.rs  linker.ld  readme.md
.cargo/: config.toml
src/: api.rs  macros.rs  main.rs  parser.rs
src/arch/: mod.rs  pi4b.rs
src/commands/: clear.rs  help.rs  mod.rs
src/commands/binaries/: mod.rs
src/commands/src/: clear.rs
src/drivers/: mod.rs  uart.rs
src/runtime/: allocator.rs  core_registry.rs  loader.rs  mod.rs  panic.rs
util/gdb-multiarch/: README.txt  help.rs  lib.rs
windows_build_scripts/: build+asm.ps1  build+run_gdb.ps1  build+run_stdout.ps1  build+run_telnet.ps1  build_release.ps1
